<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InfoBarik</string>
    <string name="action_settings">Settings</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="button_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_saldo_actual"></string>
    <string name="text_saldo_barik">Saldo: </string>
    <string name="text_fecha_actualizacion_barik">Actualizado: </string>
    <string name="text_fecha_caducidad_barik">Caducidad: </string>
    <string name="text_tipo_barik">Tipo: </string>
    <string name="text_numero_cliente_barik">Nº Cliente: </string>
    <string name="text_situacion_barik">Situación: </string>
    <string name="text_numero_tarjeta_barik">Nº Tarjeta: </string>
    <string name="text_user_pass_incorrectos">El usuario o password son incorrectos.</string>
    <string name="text_user_vacio">Debe introducir un usuario</string>
    <string name="text_pass_vacio">Debe introducir una contraseña</string>
    <string name="text_recargar">Actualizar </string>
    <string name="barik">Barik</string>
    <string name="drawer_open">Abrir</string>
    <string name="information">Información</string>
    <string name="drawer_close">Cerrar</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="euskara">Euskera</string>
    <string name="espaniol">Español</string>

    <string-array name="menu_array">
        <item>Saldo</item>
        <item>Idioma</item>
        <item>Información</item>
        <item>Salir</item>
    </string-array>
    <string name="title_activity_saldo">Saldo</string>
    <string name="title_activity_info">Información</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="infoActualizacion">La información mostrada en esta aplicacion depende de la propia pagina web de barik. Esta pagina avisa de lo siguiente: </string>
    <string name="infoWebBarik">«Los movimientos mostrados pueden diferir de los reales, ya que la actualización de la información no es inmediata. Pueden faltar los viajes y recargas de los últimos días.»
</string>

    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="title_activity_settings">Idioma</string>
    <string name="error_saldo">No se ha podido obtener el saldo</string>
    <string name="info_adic">Información adicional</string>
    
    <string name="activa">Activa</string>
    <string name="inactiva">Inactiva</string>
    <string name="personalizada">Personalizada</string>
    


</resources>
