<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" >
		    
	    <ImageView
	        android:id="@+id/background_image"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:contentDescription="@string/title_activity_saldo_actual"
	        android:scaleType="centerCrop"
	        android:src="@drawable/huellaclara" >
	
	    </ImageView>
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin" >
				
		    	<TextView
		        android:id="@+id/tituloInfo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="5dp"
		        android:text="@string/information"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="24sp" />

		    	<TextView
		    	    android:id="@+id/infoActualizacion"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_alignParentLeft="true"
		    	    android:layout_alignParentRight="true"
		    	    android:layout_below="@+id/tituloInfo"
		    	    android:layout_marginTop="30dp"
		    	    android:text="@string/infoActualizacion"
		    	    android:textAppearance="?android:attr/textAppearanceMedium" />

		    	<TextView
		    	    android:id="@+id/textView1"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_alignParentLeft="true"
		    	    android:layout_alignParentRight="true"
		    	    android:layout_below="@+id/infoActualizacion"
		    	    android:layout_marginTop="10dp"
		    	    android:text="@string/infoWebBarik"
		    	    android:textStyle="italic"
		    	    android:textAppearance="?android:attr/textAppearanceMedium" />
		    	
		</RelativeLayout>
	</FrameLayout>
	
	<ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:background="#E6424242"
        android:divider="@drawable/list_divider" 
        android:dividerHeight="1px"/>
</android.support.v4.widget.DrawerLayout>	