<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	    
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/huella"
        android:contentDescription="@string/title_activity_saldo_actual" >

    </ImageView>
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <WebView
	        android:id="@+id/browser"
	        android:visibility="gone"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" />

	    <TextView
	        android:id="@+id/tituloBarik"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="5dp"
	        android:text="@string/barik"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#FF0000"
	        android:textSize="22sp" />

	    <TextView
	        android:id="@+id/text_saldo_barik"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tituloBarik"
	        android:layout_marginLeft="18dp"
	        android:layout_marginTop="16dp"
	        android:text="@string/text_saldo_barik"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="18sp" />

	    <TextView
	        android:id="@+id/resultado_saldo_barik"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="15dp"
	        android:layout_alignTop="@+id/text_saldo_barik"
	        android:text="@string/text_saldo_barik"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="18sp" />
	
	</RelativeLayout>
</FrameLayout>